--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha test/**/*.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,5 @@
   "devDependencies": {
     "chai": "^5.1.1",
     "mocha": "^10.5.1"
-  },
-  "type": "module"
+  }
 }
