--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "devDependencies": {
     "chai": "^5.1.1",
     "mocha": "^10.5.1"
-  }
+  },
+  "type": "commonjs"  // Cambia a CommonJS si deseas usar require() en tus archivos
 }
