--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.19.2"
   },
   "devDependencies": {
     "chai": "^5.1.1",
-    "mocha": "^10.5.1",
-    "esm": "^3.2.25"
-  },
-  "type": "module"  
+    "mocha": "^10.5.1"
+  }
 }
