--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --experimental-modules test/test.js"
+    "test": "mocha --experimental-modules test/test.mjs"
   },
   "keywords": [],
   "author": "",
